# python-sendparcel-inpost

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: api.md  configuration.md  index.md  quickstart.md
src/sendparcel_inpost/: __init__.py  client.py  enums.py  exceptions.py  status_mapping.py  types.py
src/sendparcel_inpost/providers/: __init__.py  courier.py  locker.py
tests/: conftest.py  test_client.py  test_config_schema.py  test_courier_provider.py  test_entry_points.py  test_enums.py  test_exceptions.py  test_locker_provider.py  test_status_mapping.py  test_types.py
